@@ -2560,6 +2560,17 @@
       </component>
     </version>
   </module>
+  <module name="libgtcpsocket">
+    <version release="gnome-2.1-extras">
+      <component name="libgtcpsocket" dir="libgtcpsocket">
+	<podir dir="po"/>
+	<potname name="libgtcpsocket-1.0.pot"/>
+	<branch name="HEAD"/>
+	<regenerate/>
+	<download/>
+      </component>
+    </version>
+  </module>
   <module name="libgtop">
     <version release="gnome-1.4-core">
       <component name="libgtop" dir="libgtop">
