@@ -1,5 +1,9 @@
 2003-01-30  Christian Rose  <menthos@menthos.com>
 
+	* translation-status.xml: Added libgtcpsocket to 2.1-extras.
+
+2003-01-30  Christian Rose  <menthos@menthos.com>
+
 	* translation-status.xml: vte has been branched. Reflect
 	this.
 
